--- a/module1/Ring.html
+++ b/module1/Ring.html
@@ -1,9 +1,24 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Module1 </title>
+	<title>Module 1 created</title>
+	<meta charset="utf-8">
+	<style>
+		h1{background: blue;
+			border-color: green;
+			margin-left: auto;
+			margin-right: auto;
+		}
+		.name{background: #00ffda;
+			border: 1px solid grey;
+			margin-bottom: 20 px;
+			margin-top: 10 px;}
+	</style>
 </head>
 <body>
-<h1>Development environment </h1>
+<h1>Development Setup </h1>
+<div>
+	<p class="name">My name is Mukhveer. Great work !! continue doing it ....</p>
+</div>
 </body>
 </html>
